# learning

micro_bit/led_compass/: Cargo.toml
micro_bit/led_compass/src/: calibration.rs  main.rs
micro_bit/lsm303agr/: Cargo.toml
micro_bit/lsm303agr/src/: main.rs
micro_bit/send_serial/: Cargo.toml
micro_bit/send_serial/src/: main.rs  serial_setup.rs
micro_bit/spiral/: Cargo.toml
micro_bit/spiral/src/: main.rs
rust_web_server/: Cargo.toml  build.rs
rust_web_server/src/: lib.rs  main.rs
