[package]
name = "spiral"
version = "0.1.0"
edition = "2021"


[dependencies]
microbit-v2 = "0.15.1"
cortex-m = { version = "0.7.6"}
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
embedded-hal = "1.0.0"

[dev-dependencies]
